@@ -31,7 +31,7 @@ class action_plugin_linkback_antispam extends DokuWiki_Action_Plugin {
         return array (
             'author' => 'Gina Haeussge',
             'email' => 'osd@foosel.net',
-            'date' => '2007-04-12',
+            'date' => '2008-04-06',
             'name' => 'Linkback Plugin (basic antispam component)',
             'desc' => 'Basic antispam measures against linkback spam.',
             'url' => 'http://wiki.foosel.net/snippets/dokuwiki/linkback',
