@@ -24,7 +24,7 @@ class syntax_plugin_linkback extends DokuWiki_Syntax_Plugin {
         return array (
             'author' => 'Gina Haeussge',
             'email' => 'osd@foosel.net',
-            'date' => '2007-04-12',
+            'date' => '2008-04-06',
             'name' => 'Linkback Plugin',
             'desc' => 'Enables/disables linkback features.',
             'url' => 'http://wiki.foosel.net/snippets/dokuwiki/linkback',
